fixed gradle files
 to use the dependencies from a4